# yt-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  database.rs  downloader.rs  error.rs  lib.rs  main.rs  storage.rs  transcriber.rs
src/commands/: channel.rs  get.rs  init.rs  list.rs  mod.rs  read.rs  reindex.rs  search.rs  stats.rs  transcribe.rs  yt_search.rs
yt-mcp/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
yt-mcp/src/yt_transcribe/: __init__.py  cli.py  config.py  database.py  downloader.py  server.py  storage.py  transcriber.py
