[package]
name = "yt-cli"
version = "0.1.0"
edition = "2024"
description = "Download and transcribe videos using yt-dlp and AssemblyAI"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "6"
dotenvy = "0.15"
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
